--- a/about-product.html
+++ b/about-product.html
@@ -17,8 +17,10 @@
 		</div>
 		<div class="collapse navbar-collapse" id="navbar">
 			<ul class = "nav navbar-nav">
-				<li><a href="about:blank">somewhere</a></li>
-				<li><a href="about:blank">somewhere</a></li>
+				<li><a href="about:blank">somewhere
+				</a></li>
+				<li><a href="about:blank">somewhere
+				</a></li>
 			</ul>
 		</div>
 	</div>
@@ -30,3 +32,4 @@
 	
 	</script>
 </body>
+</html>
