auto picture size

--- a/about-product.html
+++ b/about-product.html
@@ -6,8 +6,8 @@
 		<link rel="stylesheet" type="text/css" href="stylesheet.css"/>
 </head>
 <body>
-<nav class="navbar navbar-inverse backgroundcolor">
-	<div class ="container-fluid">
+<nav class="navbar navbar-inverse">
+	<div  class ="container-fluid">
 		<div class="navbar-header">
 			<button type ="button" class="navbar-toggle collasped" data-toggle="collaspe" data-target="#navbar" aria-expanded="false">
 				<span class="sr-only">Toggle navigation</span>
