--- a/advertisment.html
+++ b/advertisment.html
@@ -15,19 +15,27 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
 <body>
 
 <!-- Links (sit on top) -->
-<div class="w3-top">
-  <div class="w3-row w3-large w3-light-grey">
-    <div class="w3-col s3">
+<!--good one-->
+<div class="w2-top">
+  <div class="w2-row w2-large w3-light-grey">
+    <div class="w3-col s2">
       <a href="#" class="w3-button w3-block">Home</a>
     </div>
-    <div class="w3-col s3">
-      <a href="#plans" class="w3-button w3-block">Plans</a>
+    <div class="w3-col s2">
+      <a href="#plans" class="w3-button w3-block">About us</a>
     </div>
-    <div class="w3-col s3">
-      <a href="#about" class="w3-button w3-block">About</a>
+    <div class="w3-col s2">
+      <a href="#aboutmealbot" class="w3-button w3-block">About Meal Bot</a>
     </div>
-    <div class="w3-col s3">
-      <a href="#contact" class="w3-button w3-block">Contact</a>
+    <div class="w3-col s2">
+      <a href="#market" class="w3-button w3-block">Market analysis</a>
+    </div>
+    <div class="w3-col s2">
+      <a href="#Businesss" class="w3-button w3-block">Business plan</a>
+    </div>
+  </div>
+  <div class="w3-col s2">
+      <a href="#Advertisment" class="w3-button w3-block">Advertisment</a>
     </div>
   </div>
 </div>
@@ -60,7 +68,6 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
         </li>
       </ul>
     </div>
-
 
   
 </body>
