--- a/about-product.html
+++ b/about-product.html
@@ -18,9 +18,9 @@
 		</div>
 		<div class="collapse navbar-collapse" id="navbar">
 			<ul class = "nav navbar-nav">
-				<li><a href="about:blank">somewhere
+				<li><a href="home.html">Home
 				</a></li>
-				<li><a href="about:blank">somewhere
+				<li><a href="about-us.html">About us
 				</a></li>
 			</ul>
 		</div>
