--- a/navbar.html
+++ b/navbar.html
@@ -1,24 +1,29 @@
 <!--this is my navbar (alexis)-->
-<div class="w2-top">
-  <div class="w2-row w2-large w3-light-grey">
-    <div class="w3-col s2">
-      <a href="#" class="w3-button w3-block">Home</a>
+<nav class="navbar navbar-inverse">
+  <div  class ="container-fluid">
+    <div class="navbar-header">
+      <button type ="button" class="navbar-toggle collasped" data-toggle="collaspe" data-target="#navbar" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class ="icon-bar"></span>
+        <span class ="icon-bar"></span>
+        <span class ="icon-bar"></span>
+      </button>
     </div>
-    <div class="w3-col s2">
-      <a href="#plans" class="w3-button w3-block">About us</a>
-    </div>
-    <div class="w3-col s2">
-      <a href="#aboutmealbot" class="w3-button w3-block">About Meal Bot</a>
-    </div>
-    <div class="w3-col s2">
-      <a href="#market" class="w3-button w3-block">Market analysis</a>
-    </div>
-    <div class="w3-col s2">
-      <a href="#Businesss" class="w3-button w3-block">Business plan</a>
+    <div class="collapse navbar-collapse" id="navbar">
+      <ul class = "nav navbar-nav">
+        <li><a href="home.html">Home
+        </a></li>
+        <li><a href="about-product.html">About Product
+        </a></li>
+        <li><a href="about-us.html">About Us
+        </a></li>
+        <li><a href="finance.html">Finance
+        </a></li>
+        <li><a href="market.html">Market
+        </a></li>
+        <li><a href="advertisement.html">Advetisement
+        </a></li>
+      </ul>
     </div>
   </div>
-  <div class="w3-col s2">
-      <a href="#Advertisment" class="w3-button w3-block">Advertisment</a>
-    </div>
-  </div>
-</div>
+</nav>
