--- a/home.html
+++ b/home.html
@@ -18,9 +18,17 @@
 		</div>
 		<div class="collapse navbar-collapse" id="navbar">
 			<ul class = "nav navbar-nav">
-				<li><a href="advertisement.html">somewhere
+				<li><a href="home.html">Home
 				</a></li>
-				<li><a href="about:blank">somewhere
+				<li><a href="about-product.html">About Product
+				</a></li>
+				<li><a href="about-us.html">About Us
+				</a></li>
+				<li><a href="finance.html">Finance
+				</a></li>
+				<li><a href="market.html">Market
+				</a></li>
+				<li><a href="advertisement.html">Advetisement
 				</a></li>
 			</ul>
 		</div>
