--- a/about-product.html
+++ b/about-product.html
@@ -20,7 +20,15 @@
 			<ul class = "nav navbar-nav">
 				<li><a href="home.html">Home
 				</a></li>
-				<li><a href="about-us.html">About us
+				<li><a href="about-product.html">About Product
+				</a></li>
+				<li><a href="about-us.html">About Us
+				</a></li>
+				<li><a href="finance.html">Finance
+				</a></li>
+				<li><a href="market.html">Market
+				</a></li>
+				<li><a href="advertisment.html">Advertisement
 				</a></li>
 			</ul>
 		</div>
