--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
 				</a></li>
 				<li><a href="market.html">Market
 				</a></li>
-				<li><a href="advertisement.html">Advetisement
+				<li><a href="advertisment.html">Advertisement
 				</a></li>
 			</ul>
 		</div>
