--- a/market.html
+++ b/market.html
@@ -7,24 +7,32 @@
 </head>
 <body>
 <nav class="navbar navbar-inverse">
-	<div class ="container-fluid">
-		<div class="navbar-header">
-			<button type ="button" class="navbar-toggle collasped" data-toggle="collaspe" data-target="#navbar" aria-expanded="false">
-				<span class="sr-only">Toggle navigation</span>
-				<span class ="icon-bar"></span>
-				<span class ="icon-bar"></span>
-				<span class ="icon-bar"></span>
-			</button>
-		</div>
-		<div class="collapse navbar-collapse" id="navbar">
-			<ul class = "nav navbar-nav">
-				<li><a href="about:blank">somewhere
-				</a></li>
-				<li><a href="about:blank">somewhere
-				</a></li>
-			</ul>
-		</div>
-	</div>
+  <div  class ="container-fluid">
+    <div class="navbar-header">
+      <button type ="button" class="navbar-toggle collasped" data-toggle="collaspe" data-target="#navbar" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class ="icon-bar"></span>
+        <span class ="icon-bar"></span>
+        <span class ="icon-bar"></span>
+      </button>
+    </div>
+    <div class="collapse navbar-collapse" id="navbar">
+      <ul class = "nav navbar-nav">
+        <li><a href="home.html">Home
+        </a></li>
+        <li><a href="about-product.html">About Product
+        </a></li>
+        <li><a href="about-us.html">About Us
+        </a></li>
+        <li><a href="finance.html">Finance
+        </a></li>
+        <li><a href="market.html">Market
+        </a></li>
+        <li><a href="advertisment.html">Advertisement
+        </a></li>
+      </ul>
+    </div>
+  </div>
 </nav>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
 	
