finance and market

--- a/finance.html
+++ b/finance.html
@@ -34,72 +34,72 @@
     </div>
   </div>
 </nav>
-<table border="1px">
+<table class="table table-hover">
 	<tr>
-		<th>Mealbot</th>
-		<th>Year 1</th>
-		<th>Year 2</th>
-		<th>Year 3</th>
+		<th> Mealbot </th>
+		<th> Year 1 </th>
+		<th> Year 2 </th>
+		<th> Year 3 </th>
 	</tr>
 	<tr>
-		<td>Revenue</td>
-		<td>$600,000.00</td>
-		<td>$1,200,00.00</td>
-		<td>$2,400,000.00</td>
+		<td> Revenue </td>
+		<td> $600,000.00 </td>
+		<td> $1,200,00.00 </td>
+		<td> $2,400,000.00 </td>
 	</tr>
 	<tr>
-		<td># of Units</td>
-		<td>20</td>
-		<td>40</td>
-		<td>80</td>
+		<td> # of Units </td>
+		<td> 20 </td>
+		<td> 40 </td>
+		<td> 80 </td>
 	</tr>
 	<tr>
-		<td>Price of Unit</td>
-		<td>$30,000.00</td>
-		<td>$30,000.00</td>
-		<td>$30,000.00</td>
+		<td> Price of Unit </td>
+		<td> $30,000.00 </td>
+		<td> $30,000.00 </td>
+		<td> $30,000.00 </td>
 	</tr>
 	<tr>
-		<td>Costs</td>
-		<td>$596,900.00</td>
-		<td>$697,600.00</td>
-		<td>$1,219,000.00</td>
+		<td> Costs </td>
+		<td> $596,900.00 </td>
+		<td> $697,600.00 </td>
+		<td> $1,219,000.00 </td>
 	</tr>
 	<tr>
-		<td>Robot Hardware Cost</td>
-		<td>$160,700.00</td>
-		<td>$321,400.00</td>
-		<td>$642,800.00</td>
+		<td> Robot Hardware Cost </td>
+		<td> $160,700.00 </td>
+		<td> $321,400.00 </td>
+		<td> $642,800.00 </td>
 	</tr>
 	<tr>
-		<td>Robot Software Cost</td>
-		<td>$0.00</td>
-		<td>$0.00</td>
-		<td>$0.00</td>
+		<td> Robot Software Cost </td>
+		<td> $0.00 </td>
+		<td> $0.00 </td>
+		<td> $0.00 </td>
 	</tr>
 	<tr>
-		<td>Office Space</td>
-		<td>$16,200.00</td>
-		<td>$16,200.00</td>
-		<td>$16,200.00</td>
+		<td> Office Space </td>
+		<td> $16,200.00 </td>
+		<td> $16,200.00 </td>
+		<td> $16,200.00 </td>
 	</tr>
 	<tr>
-		<td>Staff Costs</td>
-		<td>$395,000.00</td>
-		<td>$310,000.00</td>
-		<td>$460,000.00</td>
+		<td> Staff Costs </td>
+		<td> $395,000.00 </td>
+		<td> $310,000.00 </td>
+		<td> $460,000.00 </td>
 	</tr>
 	<tr>
-		<td>Advertising</td>
-		<td>$25,000.00</td>
-		<td>$50,000.00</td>
-		<td>$100,000.00</td>
+		<td> Advertising </td>
+		<td> $25,000.00 </td>
+		<td> $50,000.00 </td>
+		<td> $100,000.00 </td>
 	</tr>
 	<tr>
-		<td>Profit</td>
-		<td>$3,100.00</td>
-		<td>$502,400.00</td>
-		<td>$1,181,000.00</td>
+		<td> Profit </td>
+		<td> $3,100.00 </td>
+		<td> $502,400.00 </td>
+		<td> $1,181,000.00 </td>
 	</tr>
 </table>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
