--- a/market.html
+++ b/market.html
@@ -34,6 +34,63 @@
     </div>
   </div>
 </nav>
+<table class="table table-hover">
+	<tr>
+		<th>Place</th>
+		<th>Colleges</th>
+		<th>Public Schools</th>
+		<th>Private Schools</th>
+		<th>Airports In The US</th>
+		<th>Malls</th>
+	</tr>
+	<tr>
+		<td>Amount</td>
+		<td>4140</td>
+		<td>98817</td>
+		<td>33619</td>
+		<td>15095</td>
+		<td>47000</td>
+	</tr>
+	<tr>
+		<td>Interest(Market)</td>
+		<td>70%</td>
+		<td>50%</td>
+		<td>80%</td>
+		<td>45%</td>
+		<td>15%</td>
+	</tr>
+	<tr>
+		<td>Interest(Product)</td>
+		<td>50%</td>
+		<td>40%</td>
+		<td>55%</td>
+		<td>40%</td>
+		<td>25%</td>
+	</tr>
+	<tr>
+		<td>Replacement Rate</td>
+		<td>0.05</td>
+		<td>0.1</td>
+		<td>0.05</td>
+		<td>0.05</td>
+		<td>0.05</td>
+	</tr>
+	<tr>
+		<td>Total Market Per Year</td>
+		<td>72.45</td>
+		<td>1976.34</td>
+		<td>739.618</td>
+		<td>135.855</td>
+		<td>88.125</td>
+	</tr>
+	<tr>
+		<td>Total Market Size</td>
+		<td>3012.388</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+	</tr>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
 	
 	</script>
