--- a/home.html
+++ b/home.html
@@ -34,6 +34,14 @@
 		</div>
 	</div>
 </nav>
+<div class="jumbotron">
+  <h1>Mealbot</h1>      
+  <p>An automatic food grower and cooker.</p>
+</div>
+
+
+  <!-- Left and right controls -->
+ 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
 	
 	</script>
