--- a/about-product.html
+++ b/about-product.html
@@ -17,7 +17,7 @@
 			</button>
 		</div>
 		<div class="collapse navbar-collapse" id="navbar">
-			<ul class = "nav navbar-nav">
+			<ul class = "nav navbar-pills">
 				<li><a href="home.html">Home
 				</a></li>
 				<li><a href="about-product.html">About Product
@@ -34,6 +34,8 @@
 		</div>
 	</div>
 </nav>
+<h1>About the product</h1>
+<div class="col-md-4"><img src="Mealbot2.jpg"></div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
 	
 	</script>
