--- a/about-product.html
+++ b/about-product.html
@@ -17,7 +17,7 @@
 			</button>
 		</div>
 		<div class="collapse navbar-collapse" id="navbar">
-			<ul class = "nav navbar-pills">
+			<ul class = "nav navbar-nav">
 				<li><a href="home.html">Home
 				</a></li>
 				<li><a href="about-product.html">About Product
@@ -35,7 +35,7 @@
 	</div>
 </nav>
 <h1>About the product</h1>
-<div class="col-md-4"><img src="Mealbot2.jpg"></div>
+<div class="row"><div class="col-md-2"><img class="mealbot" src="Mealbot2.jpg"></div><div class="col-md-4"></div><div class ="col-md-6"><h2>The Mealbot is a compact, efficient, self sustaining robot. It is able to cook a variety of delicious dishes. It is able to produce food inside of the machine. It has a simple touchscreen which is user friendly and shows the nutrition facts of the dish</h2></div></div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
 	
 	</script>
