--- a/advertisment.html
+++ b/advertisment.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Welcome to our advertisment page</title>
+  <title>Mealbot</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
